--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ var setCopied = '<svg fill="none" stroke="currentColor" stroke-linecap="round" s
 		'width' : 728,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');
 </script>
 <div style = "clear: both; text-align: center; margin: 5px;">
   <script type="text/javascript">
@@ -142,7 +142,7 @@ var setCopied = '<svg fill="none" stroke="currentColor" stroke-linecap="round" s
     	'width' : 300,
     	'params' : {}
     };
-    document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
+    document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
   </script>
 </div>
 <button aria-label='Close' class='close_tp_ads spade_button fab small rounded' type='button'>
@@ -193,7 +193,7 @@ var setCopied = '<svg fill="none" stroke="currentColor" stroke-linecap="round" s
 		'width' : 728,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');
 </script>
 </div>
 <div class='close_floating_ads'>Close
@@ -314,7 +314,7 @@ Post a Comment
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
 </script></p>
 <h2 style="text-align: center;"><span style="color: red;"><blockquote><blockquote><blockquote><i>ด&#3641;ล&#3636;งค&#3660;ด&#3657;านล&#3656;างบทความ</i></blockquote></blockquote></blockquote></span></h2>
 </div>
@@ -331,7 +331,7 @@ Post a Comment
 		'width' : 728,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');</script>
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/2afddf18af7c58c28789a2288403c7b3/invoke.js"></scr' + 'ipt>');</script>
 </div>
 </div>
 </div></div>
@@ -348,7 +348,7 @@ Post a Comment
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');
 </script>
 </div>
 </div>
@@ -372,7 +372,7 @@ Post a Comment
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script>
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script>
 </div>
 </div>
 </div></div>
@@ -505,7 +505,7 @@ ME
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script></p>
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script></p>
 </div>
 </div><div class='widget HTML' data-version='2' id='HTML8'>
 <div class='widget_content'>
@@ -517,7 +517,7 @@ ME
 		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//puteldestebook.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script></p>
+	document.write('<scr' + 'ipt type="text/javascript" src="//acrosssparedhash.com/968cd8c390af6539f5f6946a3927f601/invoke.js"></scr' + 'ipt>');</script></p>
 </div>
 </div></div>
 <footer class='footer_container'>
